Fixed some issues with jumping.  Formula for rate of falling needs adjustment

--- a/index.css
+++ b/index.css
@@ -9,3 +9,8 @@
     transform: translate(-50%, 0);
     width: 800px;
 }
+
+body, 
+html {
+    overflow: hidden;
+}
